# mini-env

./: .gitignore  Cargo.toml  README.md  agent.py
src/: env.rs  main.rs  tools.rs  types.rs
tasks/buggy/: solution.py
tasks/buggy/tests/: test_solution.py
verifier/: Cargo.toml
verifier/src/: main.rs
