[package]
name = "mini-env"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mini-env"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
tempfile = "3"
anyhow = "1"
tracing = "1"
tracing-subscriber = "1"